--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
         Rosa neighbors who have embraced our business for many decades. Our high ethical standards
         and well-defined values are central to everything we do.
     </string>
+
+    <string name="cart_content">Don’t forget about using the coupon codes you’ll
+        find around our website. They change frequently, but are always a great bargain… if we
+        do say so ourselves. If you have any questions, don’t hesitate to reach out. We love
+        helping our customers.
+    </string>
 </resources>
