--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,18 @@
         do say so ourselves. If you have any questions, don’t hesitate to reach out. We love
         helping our customers.
     </string>
+
+    <string name="tours_content">Imagine your special event hosted against the sun-drenched
+        backdrop of a 35-acre olive orchard in the beautiful rolling hills of Northern California.
+        Wake up to songbirds flittering about the lush grounds of our 20-room bed and breakfast, and
+        feast on mouth-watering breakfasts made from local, organic ingredients. We’re expert hosts
+        who’ve thrown some monumental parties and hosted a wide range of events from anniversaries,
+        to charity events, to weddings, and much more.
+    </string>
+
+    <string name="enter_label">Enter</string>
+    <string name="home_label">Home</string>
+    <string name="tours_label">Tours</string>
+    <string name="shop_label">Shop</string>
+    <string name="tours_header_label">TOURS</string>
 </resources>
