product recyclerview adapter with images using databinding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,7 @@
     <string name="firm_3_btn_label">ZMBI</string>
     <string name="stock_info">Open: %.2f\n\nClose: %.2f\n\nChange: (%.2f)</string>
     <string name="bottle_image">Image of the olive oil bottle</string>
+
+    <!--  shop product fragment -->
+    <string name="product_size_lable">%d ml bottle</string>
 </resources>
