add/remove UI button for product details, bug fix on default quantity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="add_to_cart_label">Add to Cart</string>
     <string name="added_in_card">Added</string>
     <string name="product_image_label">Bottle of olive oil</string>
+    <string name="remove_from_cart_label">(-) Remove</string>
 </resources>
